Abstract Parser created

--- a/app/views/sities/index.html.erb
+++ b/app/views/sities/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Sitios</h1>
+<h1>Sites</h1>
 
 <table>
   <thead>
@@ -25,4 +25,4 @@
 
 <br>
 
-<%= link_to 'New Sitio', new_sitio_path %>
+<%= link_to 'New Site', new_sitio_path %>
