--- a/app/views/sities/edit.html.erb
+++ b/app/views/sities/edit.html.erb
@@ -1,5 +1,6 @@
-<h1>New Sitio</h1>
+<h1>Editing Site</h1>
 
 <%= render 'form', sitio: @sitio %>
 
+<%= link_to 'Show', @sitio %> |
 <%= link_to 'Back', sitios_path %>
