--- a/app/views/sities/new.html.erb
+++ b/app/views/sities/new.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Sitio</h1>
+<h1>New Site</h1>
 
 <%= render 'form', sitio: @sitio %>
 
-<%= link_to 'Show', @sitio %> |
 <%= link_to 'Back', sitios_path %>
