--- a/app/views/scrape_methods/show.html.erb
+++ b/app/views/scrape_methods/show.html.erb
@@ -9,7 +9,7 @@
     <span class="glyphicon glyphicon-pencil"></span>
     Edit
   <% end %>
-  <h1>Show bucket</h1>
+  <h1>Show Method</h1>
 </div>
 
 <p>
