--- a/app/views/fields/edit.html.erb
+++ b/app/views/fields/edit.html.erb
@@ -1,6 +1,20 @@
-<h1>Editing Field</h1>
+<!-- <h1>Editing Field</h1>
 
 <%= render 'form', field: @field %>
 
 <%= link_to 'Show', @field %> |
-<%= link_to 'Back', fields_path %>
+<%= link_to 'Back', fields_path %> -->
+
+<div class="page-header">
+  <%= link_to fields_path, class: 'btn btn-default' do %>
+    <span class="glyphicon glyphicon-list-alt"></span>
+    Back
+  <% end %>
+  <%= link_to @field, class: 'btn btn-primary' do %>
+    <span class="glyphicon glyphicon-info-sign"></span>
+    Show
+  <% end %>
+  <h1>Editing Field</h1>
+</div>
+
+<%= render 'form', field: @field %>
