--- a/app/views/fields/new.html.erb
+++ b/app/views/fields/new.html.erb
@@ -1,5 +1,14 @@
-<h1>New Field</h1>
+<!-- <h1>New Field</h1>
 
 <%= render 'form', field: @field %>
 
-<%= link_to 'Back', fields_path %>
+<%= link_to 'Back', fields_path %> -->
+<div class="page-header">
+  <%= link_to fields_path, class: 'btn btn-default' do %>
+    <span class="glyphicon glyphicon-list-alt"></span>
+    Back
+  <% end %>
+  <h1>New Field</h1>
+</div>
+
+<%= render 'form', field: @field %>
