--- a/app/views/fields/show.html.erb
+++ b/app/views/fields/show.html.erb
@@ -1,9 +1,17 @@
 <p id="notice"><%= notice %></p>
 
+<div class="page-header">
+  <%= link_to fields_path, class: 'btn btn-default' do %>
+    <span class="glyphicon glyphicon-list-alt"></span>
+    Back
+  <% end %>
+  <%= link_to edit_field_path(@field), class: 'btn btn-primary' do %>
+    <span class="glyphicon glyphicon-pencil"></span>
+    Edit
+  <% end %>
+  <h1>Show Field</h1>
+</div>
 <p>
-  <strong>Name:</strong>
+  <strong>Field:</strong>
   <%= @field.name %>
 </p>
-
-<%= link_to 'Edit', edit_field_path(@field) %> |
-<%= link_to 'Back', fields_path %>
