--- a/app/views/fields/_form.html.erb
+++ b/app/views/fields/_form.html.erb
@@ -20,6 +20,13 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :schema_id, class:'col-lg-2 control-label'  %>
+    <div class="col-lg-10">
+      <%= f.select :schema_id, @schemas, {}, { class: "form-control", required: true } %>
+    </div>
+  </div>
+
+  <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <%= f.submit class: "btn btn-primary" %>
     </div>
